<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TextViewActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textview_scrollview">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
	<TextView android:id="@+id/textview_textview_changetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_textview_value"
        android:background="@color/blue"
        android:textSize="@dimen/textview_textview_fontsize"
        android:textColor="@color/red"/>
	
	<EditText android:id="@+id/textview_edittext_inputtext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/textview_edittext_default"
	    android:inputType="text"
	    android:layout_below="@id/textview_textview_changetext"/>
	
	<LinearLayout android:id="@+id/linearLayout1"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/textview_edittext_inputtext">
		<CheckBox android:id="@+id/textview_checkbox_one"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/textview_checkbox_one"
		   
		    android:typeface="serif"/>
		
		<CheckBox android:id="@+id/textview_checkbox_two"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/textview_checkbox_two"
		    android:textStyle="bold"/>
		
		<CheckBox android:id="@+id/textview_checkbox_three"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/textview_checkbox_three"
		    android:textStyle="italic"/>
	</LinearLayout>
	
    <RadioGroup android:id="@+id/textview_radioGroup_radios"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1">
		<RadioButton android:id="@+id/textview_radioGroup_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_radioGroup_one"/>
        <RadioButton android:id="@+id/textview_radioGroup_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_radioGroup_two"/>
        <RadioButton android:id="@+id/textview_radioGroup_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_radioGroup_three"/>
    </RadioGroup>
    
    <Spinner android:id="@+id/textview_spinner_countries"
        android:layout_below="@id/textview_radioGroup_radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <AutoCompleteTextView android:id="@+id/textview_autocomplete_text"
        android:layout_below="@id/textview_spinner_countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    
	<ProgressBar android:id="@+id/textview_progressbar_cirle" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_autocomplete_text"/>
    
    <ProgressBar android:id="@+id/textview_progressbar_hori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_progressbar_cirle"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="50"
        android:secondaryProgress="77"/>

</RelativeLayout>
</ScrollView>
